--- a/app/src/main/res/layout/cards.xml
+++ b/app/src/main/res/layout/cards.xml
@@ -7,8 +7,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/color_white"
-        card_view:cardCornerRadius="10dp"
+         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
 
@@ -24,8 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_launcher"/>
+                android:layout_weight="1"/>
 
             <LinearLayout
                 android:layout_width="0dp"
